src/objects/Campaign_Package__c.object
<CustomObject>
    <description>Campaign: Combination of campaign offerings</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Packages</relationshipLabel>
        <relationshipName>Campaign_Packages_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Package_Description__c</fullName>
        <label>Package Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Items__c</fullName>
        <label>Package Items</label>
        <summaryForeignKey>Package_Item__c.Package_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Campaign Package</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IN0000000CrmwMAC_00NN0000000Ukj6MAC</fullName>
        <active>false</active>
        <errorMessage>The campaign package does not belong to the participanting dealer&apos;s campaign.</errorMessage>
        <field>Participating_Dealer__c.Campaign_Package__c</field>
        <filterItems>
            <field>Campaign_Package__c.Campaign__c</field>
            <operation>equals</operation>
            <valueField>$Source.Campaign__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Participating Dealer_Campaign Package</name>
        <sourceObject>Participating_Dealer__c</sourceObject>
    </namedFilters>
    <pluralLabel>Campaign Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>